crates/java-syntax/tests/snapshots/lexer_snapshots__lex_error_invalid_number_binary_digit.snap
---
source: crates/java-syntax/tests/lexer_snapshots.rs
expression: out
---
SOURCE:
0b1012
TOKENS:
INTEGER_LITERAL "0b1012"

LEX_ERRORS:
LexicalError { kind: InvalidNumber, range: 0..5 }
