crates/java-syntax/tests/snapshots/lexer_snapshots__lex_error_invalid_number_fraction_underscore.snap
---
source: crates/java-syntax/tests/lexer_snapshots.rs
expression: out
---
SOURCE:
0._1f
TOKENS:
NUMBER_LIT "0._1f"

LEX_ERRORS:
LexicalError { kind: InvalidNumber, at_offset: 0 }
