crates/java-syntax/tests/snapshots/lexer_snapshots__lex_error_invalid_number_trailing_underscore.snap
---
source: crates/java-syntax/tests/lexer_snapshots.rs
expression: out
---
SOURCE:
123_
TOKENS:
NUMBER_LIT "123_"

LEX_ERRORS:
LexicalError { kind: InvalidNumber, at_offset: 0 }
