crates/java-syntax/tests/snapshots/lexer_snapshots__lex_error_invalid_underscore_exponent_2.snap
---
source: crates/java-syntax/tests/lexer_snapshots.rs
expression: out
---
SOURCE:
1e+_10
TOKENS:
FLOAT_LITERAL "1e+_10"

LEX_ERRORS:
LexicalError { kind: InvalidNumber, range: 0..3 }
