crates/java-syntax/tests/snapshots/lexer_snapshots__lex_error_invalid_underscore_integer.snap
---
source: crates/java-syntax/tests/lexer_snapshots.rs
expression: out
---
SOURCE:
123_
TOKENS:
INTEGER_LITERAL "123_"

LEX_ERRORS:
LexicalError { kind: InvalidNumber, range: 0..4 }
