crates/java-syntax/tests/snapshots/lexer_snapshots__lex_error_invalid_unicode_escape_non_hex.snap
---
source: crates/java-syntax/tests/lexer_snapshots.rs
expression: out
---
SOURCE:
int \u006G = 1;
TOKENS:
INT_KW "int"
WHITESPACE " "
UNKNOWN "\\"
IDENTIFIER "u006G"
WHITESPACE " "
EQUAL "="
WHITESPACE " "
INTEGER_LITERAL "1"
SEMICOLON ";"
EOF ""

LEX_ERRORS:
LexicalError { kind: UnexpectedChar('\\'), range: 4..5 }
LexicalError { kind: InvalidUnicodeEscape, range: 4..10 }
